--- a/public/css/base.css
+++ b/public/css/base.css
@@ -17,6 +17,7 @@ time, mark, audio, video, input, select {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
+	line-height: 1;
 	vertical-align: baseline;
 	box-sizing: border-box;
 }
@@ -43,13 +44,16 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+a, label {display: inline-block;}
 a:link, a:visited, a:hover, a:active {color: inherit; text-decoration: none;}
 img {vertical-align: bottom;}
+input, button {border-radius: 0; outline: none; border: none; font-size: inherit; background-color: transparent; cursor: pointer; padding: 0; line-height: inherit;}
 
 /******************** Base ***********************/
 .clearfix::after {display: block; content: ""; clear: both;}
 .img {width: 100%;}
 .imgx {max-width: 100%;}
+.fa {line-height: 1;}
 
 .swiper-button-prev, 
 .swiper-button-next, 
