--- a/public/css/index.css
+++ b/public/css/index.css
@@ -37,9 +37,9 @@ a.anchor {height: 0; line-height: 0; display: inline;}
 
 /************** main-wrapper ***************/
 .main-wrapper {position: relative; padding-top: 48px;}
-.main-wrapper .swiper-slide{width: 100%; height: 100vh;}
-.main-wrapper .swiper-slide img{width: 100%; height: 100vh;}
-.main-wrapper .swiper-slide iframe{width: 100%; height: 100vh;}
+.main-wrapper .swiper-slide{ width: 100%; height: 600px; overflow: hidden;}
+.main-wrapper .swiper-slide img{width: 70%; height: 100%; margin: 0 auto; display: block;}
+.main-wrapper .swiper-slide iframe{max-width: 900px; height: 100%;margin: 0 auto;}
 .main-wrapper > .bt-swiper {color: #f9f9f9; font-weight: lighter; font-size: 5em; position: absolute; top: 50%; 
     transform: translateY(-50%); z-index: 5; cursor: pointer; user-select: none; outline: none; transition: all .5s; opacity: .2;}
     .main-wrapper > .bt-swiper:hover{opacity: 1;}
@@ -141,9 +141,11 @@ a.anchor {height: 0; line-height: 0; display: inline;}
 
 @media (max-width: 992px) {
 	.modal-wrapper > .modal-wrap {width: 700px;}
+	.main-wrapper .swiper-slide img{width: 100%;}
 }
 
 @media (max-width: 768px) {
+
 	.header-wrapper > .navi-wrapper > .navi:not(:first-child) {display: none;}
 	.header-wrapper > .search-wrapper {display: none;}
 	.header-wrapper > .bars-wrapper {display: block;}
